<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/dialog_body">


    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="@dimen/padding_between"
        android:paddingBottom="@dimen/padding_between"
        android:text="@string/info_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/info_text"
        android:layout_marginTop="@dimen/padding_between"
        android:layout_marginBottom="@dimen/padding_between"
        android:background="#C8C9CB" />

    <EditText
        android:id="@+id/Delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/Delay"
        android:inputType="time"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/Timelimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Delay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/Timelimit"
        android:inputType="time"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <EditText
        android:id="@+id/PodId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Timelimit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_marginBottom="@dimen/padding_between"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/PodId"
        android:inputType="numberSigned"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <Button
        android:id="@+id/entrar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#4CAF50"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding"
        android:text="@string/entrar_boton"
        android:textColor="@android:color/white" />
</RelativeLayout>

